--- a/css.css
+++ b/css.css
@@ -34,13 +34,13 @@ ul li:hover {
     background: #c3bbc9;
 }
 
-ul li.checked {
+ul li.tlistada {
     background: #311d39;
     color: #fff;
     text-decoration: line-through;
 }
 
-ul li.checked::before {
+ul li.tlistada::before {
     content: '';
     position: absolute;
     border-color: #fff;
@@ -66,14 +66,14 @@ ul li.checked::before {
     clear: both;
 }
 
-.close {
+.bfechar {
     position: absolute;
     right: 0;
     top: 0;
     padding: 12px 16px 12px 16px;
 }
 
-.close:hover {
+.bfechar:hover {
     background-color: #523961;
     color: white;
 }
@@ -88,7 +88,7 @@ input {
     font-size: 16px;
 }
 
-.addBtn {
+.adicionar {
     padding: 10px;
     width: 25%;
     background: #523961;
@@ -101,7 +101,7 @@ input {
     border-radius: 0;
   }
   
-  .addBtn:hover {
+  .adicionar:hover {
     background-color: #52396188;
   }
 
